eks/ingress-grpc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transactions-ingress-grpc
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  ingressClassName: nginx
  rules:
  - host: "api.test-transactions.me"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: transactions-api-service
            port:
              number: 90
  tls:
  - hosts:
    - gapi.test-transactions.me
    secretName: transactions-gapi-cert
